<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuestList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="user_continue">Continue</string>
    <string name="add_quest">Add New Quest</string>
    <string name="quest_type">Quest Type</string>
    <string name="quest_name">Quest Name</string>
    <string name="quest_xp">xp</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="xp_fit">FIT</string>
    <string name="xp_int">INT</string>
    <string name="xp_art">ART</string>
    <string name="xp_chr">CHR</string>
    <string name="xp_per">PER</string>
    <string name="title_activity_new_quest">New Quest</string>
    <string name="hello_world">Hello world!</string>
    <string name="quest_xp_new">Quest Completion Bonus</string>
    <string name="new_task">Add Task</string>
    <string name="rem_task">Remove Task</string>
    <string name="save_quest">Save Quest</string>
    <string name="title_activity_add_quest">Add A Quest</string>
    <string name="title_activity_add_task">Add a Task</string>
    <string name="save_task">Save Task</string>
    <string name="user_level">Level</string>
    <string name="task_completed">Completed</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="task_xp_new">XP</string>
    <string name="quest_total_xp">Total XP</string>

</resources>
