<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblNewTaskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name" />

            <EditText
                android:id="@+id/txtNewTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblNewTaskDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_description" />

            <EditText
                android:id="@+id/txtNewTaskDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/chkNewTaskFit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xp_fit"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/chkNewTaskInt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xp_int"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/chkNewTaskArt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xp_art"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/chkNewTaskChr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xp_chr"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/chkNewTaskPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xp_per"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblNewTaskXp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_xp_new" />

            <EditText
                android:id="@+id/txtNewTaskXp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_task"/>

    </LinearLayout>