<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtTaskName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtTaskDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:maxLines="5"
        android:text="@string/task_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:id="@+id/txtXp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/task_xp_new"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtSkills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/task_completed" />

    </LinearLayout>

</LinearLayout>
