<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.davies.questlist.ui.NewQuestActivity" >

    <LinearLayout
        android:id="@+id/lloNewQuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/lblNewQuestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest_name" />

        <EditText
            android:id="@+id/txtNewQuestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <LinearLayout
            android:id="@+id/lloNewQuestXP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblNewQuestXp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_xp_new" />

            <EditText
                android:id="@+id/txtNewQuestXp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lloNewTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lloNewQuest"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/lblNewTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name" />

        <EditText
            android:id="@+id/txtNewTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/lblNewTaskDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description" />

        <EditText
            android:id="@+id/txtNewTaskDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblNewTaskFit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xp_fit" />

                <EditText
                    android:id="@+id/txtNewTaskFit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/lblNewTaskInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xp_int" />

                <EditText
                    android:id="@+id/txtNewTaskInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/lblNewTaskArt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xp_art" />

                <EditText
                    android:id="@+id/txtNewTaskArt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblNewTaskChr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xp_chr" 
                    android:layout_column="0" />

                <EditText
                    android:id="@+id/txtNewTaskChr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" 
                    android:layout_column="1" />

                <TextView
                    android:id="@+id/lblNewTaskPer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xp_per" 
                    android:layout_column="2" />

                <EditText
                    android:id="@+id/txtNewTaskPer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" 
                    android:layout_column="3" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lloQuestTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lloNewTaskName"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/btnAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task" />

        <Button
            android:id="@+id/btnRemoveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_task" />

    </LinearLayout>

    <ListView
        android:id="@+id/lstQuestTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lloQuestTask" >
    </ListView>

    <Button
        android:id="@+id/btnSaveQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lstQuestTasks"
        android:text="@string/save_quest" />

</RelativeLayout>