<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.davies.questlist.ui.AddQuestActivity" >

    <LinearLayout
        android:id="@+id/lloNewQuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblNewQuestName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_name" />

        <EditText
            android:id="@+id/txtNewQuestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lloNewQuestXP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblNewQuestXp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_xp_new" />

        <EditText
            android:id="@+id/txtNewQuestXp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblTotalQuestXp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/quest_total_xp" />

        <TextView
            android:id="@+id/txtTotalQuestXp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XP" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_task" />

</LinearLayout>